--- a/vercel.config
+++ b/vercel.config
@@ -5,5 +5,9 @@
       "source": "/(.*)",
       "destination": "http://43.203.196.160:8080"
     }
+    {
+        "source": "/(.*)",
+        "destination": "https://newsapi.org/v2"
+    }
   ]
 }
